--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/mwi079/footprint#readme",
   "dependencies": {
     "axios": "^0.21.1",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "postcode": "^5.0.0"
   },
   "devDependencies": {
     "@material-ui/core": "^4.11.2",
